--- a/math/高数.md
+++ b/math/高数.md
@@ -5,7 +5,7 @@
 
 
 - ![image-20231204105044340](assets/image-20231204105044340.png)
-- 
+- 三元函数的全微分，组成的向量场的旋度为0。三元函数的全微分积分为空间第二型曲线积分，积分区间为从点（0，0，0）到（X,Y,Z）。
 
 # 反常积分
 
