--- a/politics/近代史.md
+++ b/politics/近代史.md
@@ -204,7 +204,7 @@
 
 1937年。:star:2月，中共提出停止内战等五项要求，若国民党将这五项要求定为国策，则共产党愿意实行包括武力推翻国民党政府的方针在内的四项保证。上述主张引起巨大反响和赞同。:star:2月国民党五届三中全会（国共两党第二次合作不可阻挡，同意国共两党谈判，并在会议文件上**第一次写上了“抗日”的字样**）。:star:夏，毛泽东《实践论》《矛盾论》（揭露和批判了长期存在于党内的主观主义错误尤其是教条主义错误，科学的阐明了党的马克思主义的思想路线）。:star:7月7日，**卢沟桥事变（七七事变）**，日本全面侵华战争由此开始，中国抗日战争进入全民族抗战的新时期，开辟了世界反法西斯战争的东方主战场，21天后北平沦陷，中日之间以完全处于战争状态，国民政府仅发表了《自卫抗战声明书》，并未正式对日宣战。:star:8月国共两党达成协议（八路军、新四军）。:star:8月中共**洛川会议**（抗日救国十大纲领，人民战争路线，打到日本帝国主义关键在于使已发动的抗战成为全面的全民族抗战）。:star:8月13日—11月12日，淞沪会战，上海沦陷。:star:9月6日，中华苏维埃共和国中央政府西北办事处更名“中华民国陕甘宁边区政府”:star:。9月22日，**正式结束苏维埃国家政权形式**，陕甘宁边区政府成为民国的一个特别行政区。:star:9月—11月太原会战，9月八路军**平型关大捷**是全民族抗战以来中国军队主动寻歼敌人的一次重大胜利，打破了日军不可战胜的神话；11月太原失守，在华北以国民党为主体的正规战争结束，以共产党为主体的游击战争上升到主要地位。:star:9月22日国民党《中国共产党为公布国共合作宣言》。:star:9月23日蒋介石发表实际承认共产党合法地位的谈话，第二次国共合作（1937-1945，党外合作，没有正式的固定组织形式和统一的纲领），以**国共两党第二次合作**作为基础的**抗日民族统一战线**形成。:star:11月华北战场忻口会战。:star:11月20日迁移国民政府于重庆。:star:11月，中国第一个抗日根据地——晋察冀抗日根据地成立（抗日民主根据地的建设：工作人员分配上实行“三三制”原则，共产党员大体占三分之一，左派进步分子大体占三分之一，中间分子和其他分子大体占三分之一；土地政策是减息减租，不是实行没收地主土地的政策；"发展经济，保障供给"，“自己动手，丰衣足食”）。:star:12月南京沦陷（**南京大屠杀**）。:star:本年，苏联第二个五年计划完成，苏联的工业生产总值跃居欧洲第一，世界第二。
 
-1938年。:star:1月至5月台儿庄战役、徐州会战。:star:3月，德意志与奥地利合并。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月，慕尼黑会议，割让捷克斯洛伐克苏台德领土给德国。:star:9月至11月，**中共六届六中全会**（**《论新阶段》**明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。六届六中全会是决定中国之命运的）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。:star:《中国革命和中国共产党》，第一次提出新民主主义革命路线。
+1938年。:star:1月至5月台儿庄战役、徐州会战。:star:3月，德意志与奥地利合并。:star:5月毛泽东**《论持久战》**，提出了持久战的战略总方针，批驳了分析了中日双方矛盾的四个基本特点：敌强我弱、敌小我大、敌退步我进步（关键）、敌寡我多“速胜论”、“亡国论”，科学预见了战略防御、相持、反攻三个阶段，阐明兵民是胜利之本的思想，即要依靠人民来争取抗日战争的最后胜利；把抗日游击战争放在战略地位考察。:star:6月至10月武汉会战，武汉失守。:star:9月，慕尼黑会议，割让捷克斯洛伐克苏台德领土给德国。:star:9月至11月，**中共六届六中全会**（**《论新阶段》**明确**提出了“马克思主义中国化”命题**，在艰苦卓绝的革命斗争中，以毛泽东同志为主要代表的中国共产党人进行了**马克思主义基本原理同中国具体实际的“第一次结合”**，即把马克思主义基本原理同中国革命斗争的具体实际结合起来；会议正确分析了抗日战争的形式，规定了党在抗战新阶段的任务，为实现党对抗日战争的领导进行了全面的战略规划。会议基本纠正了王明的右倾错误，进一步巩固了毛泽东在全党的领导地位，统一了全党的思想和步调，推动了各项工作迅速发展。**六届六中全会是决定中国之命运的**）。:star:10月广州失守。:star:10月从战略防御阶段转为**战略相持阶段**，日本开始”以华制华“和”以战养战“策略，日本对国民党采取以政治诱降为主、军事打击为辅的方针，国民党对内对外政策发生重大变化，逐步转变为消极抗战；抗日作战方式从国民党正面战场的正规战变为以共产党为主体的敌后游击战争。:star:10月—12月 八路军晋察冀部队在第一二〇师配合下，粉碎2万余日军对北岳区的大“扫荡”。在黄土岭伏击战中击毙日军中将旅团长，这是抗日战争中八路军击毙的日军最高级别指挥官。:star:12月，中国国民党副总裁汪精卫投降日本。:star:《中国革命和中国共产党》，第一次提出新民主主义革命路线。
 
 1939年。:star:1月国民党“防共委员会”。:star:1月—3月，八路军第一二九师主力同冀南军区部队一起进行反“扫荡”作战，巩固了冀南抗日根据地。:star:1月至4月，八路军第一二〇师主力会合冀中军区部队，连续粉碎日、伪军多次围攻。:star:5月到9月苏日诺门罕战役，日军战败，日本政府被迫签订《苏日停战协定》。:star:7月至8月，晋冀豫抗日根据地军民在八路军总部统一指挥下，反击日军5万余人的大“扫荡”。:star:8月23日《苏德互不侵犯条约》。:star:8月20日—翌年1月下旬，八路军总部在华北发动了一次大规模的对日军的进攻（百团大战）。:star:9月1日，德国进攻波兰（**一战欧洲部分爆发**）。:star:9月第一次长沙会战。:star:10月，**宪政运动**（批评国民党一党专政）。:star:10月，毛泽东**《<共产党人>发刊词》**，**第一次提出党在革命中的三大法宝**（统一战线、武装斗争、党的建设)。第一次提出“马克思列宁主义的理论和中国革命的实践相结合”。**第一次把党的建设称为“伟大的工程”**。指出统一战线和武装斗争是中国共产党领导的中国资产阶级民主革命的两个基本特点；是中国革命的两个武器，党组织是掌握这两个武器的英勇战士。:star:11月，苏芬战争。:star:12月，毛泽东**《中国革命和中国共产党》**，**第一次提出新民主主义以及新民主主义革命**这两个科学概念。第一次全面系统论述中国半殖民地半封建的社会性质问题，提出革命对象、革命动力；强调认清中国国情“乃是认清一切革命问题的基本的依据”。第一次提出“所谓新民主主义的革命，就是在无产阶级领导之下的人民大众的反帝反封建的革命”；**明确提出，“帝国主义和中华民族的矛盾，封建主义和人民大众的矛盾”，构成近代中国社会的主要矛盾**。
 
@@ -218,7 +218,7 @@
 
 1944年。:star:5月11日，豫湘桂战役（国民党军队大溃退）。:star:5月21日—翌年4月20日，中共扩大的**六届七中全会**在延安召开。全会通过毛泽东为中央委员会主席的提议，原则通过**《关于若干历史问题的决议》**，肯定了确立毛泽东在全党的领导地位的重大意义，使全党尤其是党的高级干部对中国民主革命基本问题的认识达到在马克思列宁主义基础上的一致。至此，**整风运动胜利结束**。整风运动是一次深刻的马克思主义思想教育运动，收到巨大成效。通过整风运动，实现了在以毛泽东同志为核心的党中央领导下全党新的团结和统一，为抗日战争的胜利和新民主主义革命在全国的胜利，奠定了重要的思想政治基础。延安整风运动所积累的经验对党的建设具有重大而深远的意义。:star:6月**诺曼底登陆**。:star:7月联合国国际货币金融会议（布雷顿森林货币体系，二战后以美元为中心的国际货币体系，外汇自由化、资本自由化和贸易自由化为主要内容的多边经济制度，构成资本主义集团的核心内容）。:star:9月，提出联合政府主张。:star:本年 中国共产党领导敌后军民在华北、华中、华南地区发起局部反攻，歼灭日、伪军近20万人，收复大片国土，解放人口1700多万。
 
-1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名**毛泽东思想**并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把毛泽东思想确立为党的指导思想并写入党章；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张；新民主主义的经济纲领，没收封建土地归农民、没收官僚资产阶级的垄断资本归新民主主义国家所有、保护民族工商业，其中保护民族工商业是新民主主义经济纲领中极具特色的一项内容。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议**《联合国宪章》**，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
+1945年。:star:春夏，中国共产党领导人民抗日武装继续进行攻势作战，抗日力量和抗日根据地不断发展，为转入全面反攻、夺取抗战最后胜利创造了有利条件。:star:2月雅尔塔会议（制定战后新秩序和列强利益分配的首脑会议，雅尔塔体系）。:star:3月至5月豫西鄂北会战。:star:4月中国共产党第七次全国代表大会，**党七大**，延安，制定了党的政治路线；会议正式命名毛泽东思想并规定为党一切工作的指针，对毛泽东思想作了科学的概括和阐述，把**毛泽东思想确立为党的指导思想并写入党章**；党在政治上思想上理论上走向成熟，以“团结的大会，胜利的大会”载入党的史册。毛泽东**《论联合政府》**，第一次概括了我党的**三大优良作风**：理论和实际相结合的作风、和人民群众紧密联系在一起的作风、自我批评的作风；提出了生产力标准：“中国一切政党的政策及其实践在中国人民中所表现的作用的好坏、大小，归根到底，看它对于中国人民的生产力的发展是否有帮助及其帮助之大小，看它是束缚生产力的，还是解放生产力的”；提出废除国民党一党专政，建立由各党各派组成“民主联合政府”的主张；新民主主义的经济纲领，没收封建土地归农民、没收官僚资产阶级的垄断资本归新民主主义国家所有、保护民族工商业，其中保护民族工商业是新民主主义经济纲领中极具特色的一项内容。5月，**刘少奇《关于修改党章的报告》**，第一次系统阐述毛泽东思想的文献。:star:4月至6月，联合国制宪会议**《联合国宪章》**，中国成为联合国的创始会员国之一和安理会五个常任理事国之一。:star:4月-6月，湘西会战。:star:5月**德国投降**。:star:7月，**《波茨坦公告》**，重申“开罗宣言之条件必将实施”。:star:8月，苏联进入中国东北对日作战。:star:8月6日广岛”小男孩“。:star:8月9日长崎“胖子”。:star:8月9日，毛泽东发表《对日寇的最后一战》的声明，随后，朱德发布七道全面反攻命令，中国**抗日战争进入全面反攻阶段**。:star:8月15日，日本**《终战诏书》**。:star:8月29日至10月10日，经过43天谈判，《政府与中共代表会谈纪要》（**双十协定**，确定和平建国基本方针，同意“长期合作，坚决避免内战”）。:star:8月25日中共中央在**《对目前时局的宣言》**中明确提出和平、民主、团结的口号。:star:9月2日，日本签署向同盟国投降书。:star:9月3日，中国人民抗日战争胜利纪念日。:star:9月19日，中共中央提出“向北发展，向南防御”的战略方针，强调全党全军目前的主要任务是完全控制热河、察哈尔两省，发展东北力量并争取控制东北。:star:10月25日中国政府举行受降仪式。:star:10月25日中国政府在台湾举行受降仪式，根据《波茨坦公告》，被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖，这是**抗日战争取得完全胜利**的重要标志；抗战胜利地决定因素是以爱国主义为核心的民族精神，关键是中国共产党的中流砥柱作用，重要法宝是全民族抗战。抗日战争的伟大胜利是中华民族从**近代以来陷入深重危机走向伟大复兴的历史转折点**。:star:12月，一二·一运动（反内战、争民主的爱国民主运动）。
 
 ## **1945~1949：:star:解放战争时期**
 
