--- a/数据结构/数据结构复习/栈与队列.md
+++ b/数据结构/数据结构复习/栈与队列.md
@@ -38,3 +38,4 @@ n个不同的元素进栈，出栈元素不同排列的个数为![image-20231017
 
 1. 引入一个标志变量
 2. 入队前测试尾指针在循环意义下加一后是否等于头指针，即 (sq->rear+1)%MAXSIZE == sq->front
+3. 空闲位置一直是front所指
