--- a/计网/物理层.md
+++ b/计网/物理层.md
@@ -89,9 +89,9 @@
 
 数据无论是数字的还是模拟的，为了传输的目的都必须转变成信号。
 
-调制：把数据变换为**模拟信号**的过程称为调制。
+调制：把数据变换为**模拟信号**的过程称为**调制**。
 
-编码：把数据变换为**数字信号**的过程称为编码
+编码：把数据变换为**数字信号**的过程称为**编码**
 
 信号是数据的具体表现形式，它和数据有一定的关系，但又和数据不同。
 
@@ -346,7 +346,7 @@ PCM主要包括三个步骤：**采样、量化、编码**
 ![image-20231113191359260](assets/image-20231113191359260.png)
 
 1. 为进行数据传输，主机A与主机B之间先建立一条逻辑通路，主机A发出一个特殊的**“呼叫请求”分组**，该分组通过中间结点送往主机B,若主机B同意连接，则发送**“呼叫应答”分组**予以确认。
-2. 虚电路建立后，主机A就可向主机B发送数据分组。当然，主机B也可在该虚电路上向主机A发送数据。
+2. 虚电路建立后，主机A就可向主机B发送**数据分组**。当然，主机B也可在该虚电路上向主机A发送数据。
 3. 传送结束后主机A通过发送**“释放请求”分组**来拆除虚电路，逐段断开整个连接。
 
 通过上面的例子，可以总结出虚电路服务具有如下特点：
