--- a/计网/网络层.md
+++ b/计网/网络层.md
@@ -59,7 +59,7 @@ SDN的问题:
 
 **判断网络是否进入拥塞状态的方法**：观察网络的**吞吐量与网络负载的关系**，如果随着网络负载的增加，**网络的吞吐量明显小于正常的吞吐量**，那么网络就可能已进入**“轻度拥塞”状态**；如果**网络的吞吐量随着网络负载的增大而下降**，那么网络就可能已经进入**拥塞状态**；如果网络的负载继续增大，而**网络的吞吐量下降到零**，那么网络就可能已进入**死锁状态**
 
-拥塞控制**作用**：**确保子网能够承载所达到的流量**，这是一个全局性的过程，涉及各方面的行为:主机、路由器及路由器内部的转发处理过程等。
+**拥塞控制作用：确保子网能够承载所达到的流量**，这是一个全局性的过程，涉及各方面的行为:主机、路由器及路由器内部的转发处理过程等。
 
 单一地增加资源并不能解决拥塞。
 
@@ -322,10 +322,10 @@ CIDR 的优点在于网络前缀长度的灵活性
 2. 默认路由: 用特殊前缀 0.0.0.0/0 表示默认路由，全0掩码和任何目的地址进行按位与运算，结果必然为全0,即必然和转发表中的 0.0.0.0/0 相匹配。只要目的网络是其他网络(不在转发表中)，就一律选择默认路由。
 
 综上所述，归纳出路由器执行的分组转发算法如下:
-1) 从收到的 IP 分组的首部提取目的主机的 P 地址 D(即目的地址)。
+1) 从收到的 IP 分组的首部提取目的主机的 IP 地址 D(即目的地址)。
 2) 若查找到特定主机路由(目的地址为 D)，就按照这条路由的下一跳转发分组;否则从转发表中的下一条 (即按前缀长度的顺序) 开始检查，执行步骤 3。
 3) 将这一行的子网掩码与目的地址 D 进行按位与运算。若运算结果与本行的前缀匹配，则查找结束，按照“下一跳”指出的进行处理(或者直接交付本网络上的目的主机，或通过指定接口发送到下一跳路由器)。否则，若转发表还有下一行，则对下一行进行检查，重新执行步骤 3。否则，执行步骤 4。
-    4)若转发表中有一个默认路由，则把分组传送给默认路由:否则，报告转发分组出错。值得注意的是，转发表(或路由表) 并未给分组指明到某个网络的完整路径(即先经过哪个路由器，然再经过哪个路由器等)。转发表指出，到某个网络应当先到某个路由器(即下一跳路
+4) 若转发表中有一个默认路由，则把分组传送给默认路由:否则，报告转发分组出错。值得注意的是，转发表(或路由表) 并未给分组指明到某个网络的完整路径(即先经过哪个路由器，然再经过哪个路由器等)。转发表指出，到某个网络应当先到某个路由器(即下一跳路
     由器)，在到达下一跳路由器后，再继续查找其转发表，知道下一步应当到哪个路由器。这样步一步地查找下去，直到最后到达目的网络。
     注意:得到下一跳路由器的 IP 地址后，并不是直接将该地址填入待发送的数据报，而是该IP 地址转换成 MAC 地址 (通过 ARP)，将此MAC 地址放到 MAC 首部中，然后根据这MAC 地址找到下一跳路由器。在不同网络中传送时，MAC 中的源地址和目的地址要发生变化但是网桥在转发帧时，不改变帧的源地址，请注意区分。
 
@@ -337,9 +337,9 @@ IP 地址是网络层使用的地址，它是分层次等级的。
 
 硬件地址是数据链路层使用的地址(MAC地址)，它是平面式的。
 
-在网络层及网络层之上使用 IP 地址，IP 地址放在 IP 数据报的首部，而MAC 地址放在 MAC 帧的首部。通过数据封装，把 数据报分组封装为 MAC 帧后，数据链路层看不见数据报分组中的 IP 地址。
+在网络层及网络层之上使用 IP 地址，IP 地址放在 IP 数据报的首部，而MAC 地址放在 MAC 帧的首部。通过数据封装，把 数据报分组封装为 MAC 帧后，**数据链路层看不见数据报分组中的 IP 地址**。
 
-由于路由器的隔离，IP 网络中无法通过广播MAC地址来完成跨网络的寻址，因此在网络层只使用 IP 地址来完成寻址。寻址时，每个路由器依据其路由表(依靠路由协议生成) 选择到目标网络(即主机号全为0的网络地址)需要转发到的下一跳(路由器的物理端口号或下网络地址)，而IP 分组通过多次路由转发到达目标网络后，改为在目标 LAN 中通过数据链路层的 MAC 地址以广播方式寻址。这样可以提高路由选择的效率。
+由于路由器的隔离，IP 网络中无法通过广播MAC地址来完成跨网络的寻址，因此**在网络层只使用 IP 地址来完成寻址**。寻址时，每个路由器依据其路由表(依靠路由协议生成) 选择到目标网络(即主机号全为0的网络地址)需要转发到的下一跳(路由器的物理端口号或下网络地址)，而IP 分组通过多次路由转发到达目标网络后，改为在目标 LAN 中通过数据链路层的 MAC 地址以广播方式寻址。这样可以提高路由选择的效率。
 1)在 IP 层抽象的互联网上只能看到IP数据报。
 2)虽然在IP 数据报首部中有源IP 地址，但路由器只根据目的IP 地址进行转发。
 3)在局域网的链路层，只能看见 MAC 帧。IP 数据报被封装在 MAC 帧中，通过路由器转发IP 分组时，IP 分组在每个网络中都被路由器解封装和重新封装，其 MAC 帧首部中的源地址和目的地址会不断改变。这也决定了无法使用 MAC 地址跨网络通信。
@@ -350,7 +350,7 @@ IP 地址是网络层使用的地址，它是分层次等级的。
 
 无论网络层使用什么协议，在实际网络的链路上传送数据帧时，最终必须使用硬件地址。
 
-一种方法来完成 **IP 地址到 MAC 地址的映射**，这就是地址解析协议(Address ResolutionProtocol，ARP)。
+一种方法来完成 **IP 地址到物理地址（MAC、其他）的映射**，这就是地址解析协议(Address ResolutionProtocol，ARP)。
 
 每台主机都设有一个 ARP 高速缓存，用来存放本局域网上各主机和路由器的IP地址到 MAC 地址的映射表，称 **ARP 表**。使用 ARP 来动态维护此 ARP 表。
 
@@ -373,7 +373,7 @@ DHCP 的工作原理如下:使用**客户/服务器模式**。
 
 DHCP 服务器和 DHCP 客户端的交换过程如下:
 
-1. DHCP **客户机广播“DHCP 发现”消息**，试图找到网络中的 DHCP 服务器，以便从DHCP服务器获得一个P 地址。源地址为 0.0.0.0，目的地址为 255.255.25.255
+1. DHCP **客户机广播“DHCP 发现”消息**，试图找到网络中的 DHCP 服务器，以便从DHCP服务器获得一个IP 地址。源地址为 0.0.0.0，目的地址为 255.255.25.255
 2. DHCP **服务器**收到“DHCP 发现”消息后，**广播“DHCP 提供”消息**，其中包括提供给DHCP 客户机的 IP 地址。源地址为 DHCP 服务器地址，目的地址为 255.255.255.255。
 3. DHCP **客户机**收到“DHCP 提供”消息，如果接受该IP 地址，那么就**广播“DHCP 请求"消息**向 DHCP 服务器请求提供 IP 地址。源地址为 0.0.0.0，目的地址为 255.255.255.255
 4. DHCP **服务器广播“DHCP 确认”消息**，将IP 地址分配给 DHCP 客户机。源地址为 DHCP服务器地址，目的地址为 255.255.255.255。
@@ -423,7 +423,7 @@ ICMP 询问报文有 4 种类型:
 
    最常用的是前两类。
 
-ICMP 的两个常见应用是**分组网间探测 PING (用来测试两台主机之间的连通性)**和 Traceroute(UNX中的名字，在 Windows 中是 Tracert,可以用来跟踪分组经过的路由)其中 PING使用了ICMP回送请求和回答报文，Traceroute (Tracert) 使用了ICMP 时间超过报文。
+ICMP 的两个常见应用是**分组网间探测 PING (用来测试两台主机之间的连通性)**和 Traceroute(UNX中的名字，在 Windows 中是 Tracert,可以用来跟踪分组经过的路由)其中 PING使用了ICMP**回送请求和回答报文**，Traceroute (Tracert) 使用了ICMP 时间超过报文。
 注意: PING工作在应用层，它直接使用网络层的ICMP，而未使用传输层的 TCP或UDP。Traceroute/Tracert 工作在网络层
 
 ## 特殊用途地址
@@ -538,7 +538,7 @@ Pv6 扩展了 IPv4 地址的分级概念，它使用以下3 个等级:第一级(
 ### **RIP规定:**
 
 1. 网络中的每个路由器都要维护从它自身到其他每个目的网络的**距离记录**(因此这是一组距离，称为距离向量)。
-2. 距离也称**跳数** (Hop Count)，规定从一个路由器到直接连接网络的距离(跳数)为1。而每经过一个路由器，距离(跳数)加1。
+2. 距离也称**跳数** (Hop Count)，**规定从一个路由器到直接连接网络的距离(跳数)为1**。而每经过一个路由器，距离(跳数)加1。
 3. RIP 认为好的路由就是它通过的路由器的数目少，即**优先选择跳数少的路径**。
 4. RIP 允许一条路径最多只能包含 15 个路由器 (即**最多允许 15 跳**)。因此**距离等于 16 时它表示网络不可达**。可见 RIP 只适用于小型互联网。距离向量路由可能会出现环路的情况，规定路径上的最高跳数的目的是为了防止数据报不断循环在环路上，减少网络拥塞的可能性
 5. RIP **默认**在任意两个使用 RIP 的路由器之间**每 30秒广播一次 RIP 路由更新信息，以便自动建立并维护路由表(动态维护)**。
@@ -598,9 +598,9 @@ OSPF 与 RIP 相比有以下 4 点主要区别:
 
 ### OSPF的基本工作原理
 
-由于各路由器之间频繁地交换链路状态信息，因此**所有路由器最终都能建立一个链路状态数据库**。这个数据库实际上就是全网的拓扑结构图，它在全网范围内是一致的(称为链路状态数据库的同步)。然后，每个路由器根据这个全网拓扑结构图，使用 Diikstra 最短路径算法计算从自己到各目的网络的最优路径，以此构造自己的路由表。此后，当链路状态发生变化时，每个路由器重新计算到各目的网络的最优路径，构造新的路由表。
+由于各路由器之间频繁地交换链路状态信息，因此**所有路由器最终都能建立一个链路状态数据库**。这个数据库实际上就是**全网的拓扑结构图**，它在全网范围内是一致的(称为链路状态数据库的同步)。然后，每个路由器根据这个全网拓扑结构图，**使用 Dijkstra 最短路径算法计算从自己到各目的网络的最优路径，以此构造自己的路由表**。此后，当链路状态发生变化时，每个路由器重新计算到各目的网络的最优路径，构造新的路由表。
 
-虽然使用 Diikstra 算法能计算出完整的最优路径，但**路由表中不会存储完整路径，而只存储“下一跳”**。
+虽然使用 Dijkstra 算法能计算出完整的最优路径，但**路由表中不会存储完整路径，而只存储“下一跳”**。
 
 为使 OSPF 能够用于规模很大的网络，OSPF 将一个自治系统再划分为若干更小的范围，称为**区域**。划分区域的好处是，**将利用洪泛法交换链路状态信息的范围局限于每个区域而非整个自治系统，减少了整个网络上的通信量**。**在一个区域内部的路由器只知道本区域的完整网络拓扑，而不知道其他区域的网络拓扑情况。**这些区域也有层次之分。处在上层的域称为主千区域，负责连通其他下层的区域，并且还连接其他自治域。
 
@@ -736,7 +736,7 @@ IGMP 应视为网际协议 IP 的一个组成部分，其工作可分为**两个
 2. 第二种是**基于距离-向量的路由选择;**
 3. 第三种可以建立在任何路由器协议之上，因此称为**协议无关的组播 (PIM)**。
 
-IGMP有两种版本，我们讨论现在的版本是 IGMPv2。IGMPv2 有三种类型的报文：:查询 、成员报告 和离开报告，其中查询报文
+IGMP有两种版本，我们讨论现在的版本是 IGMPv2。IGMPv2 有三种类型的报文：:**查询 、成员报告 和离开报告**，其中查询报文
 有两种类型:普通的 和特殊的。
 
 ![image-20231024170950164](assets/image-20231024170950164.png)
@@ -775,9 +775,9 @@ netstat应用程序可以用来得到接口所支持的多播地址。
 ### 直接传递和间接传递
 
 ![image-20231021202555060](assets/image-20231021202555060.png)
-直接传递(direct delivery) 就是分组的最终目的端的主机是与发送方都连接在同一个物理网络上。当分组的源端和目的端都在同一个物理网络上，或传递是在最后一个路由器与目的主机之间进行时，就出现直接传递。发送方很容易确定传递是否是直接传递，它只要提取出分组目的端的网络地址(用掩码) ,并与它所连接的网络地址进行比较。如果相同，则传递就是直接的。
+**直接传递**(direct delivery) 就是分组的最终目的端的主机是与发送方都连接在同一个物理网络上。当分组的源端和目的端都在同一个物理网络上，或传递是在最后一个路由器与目的主机之间进行时，就出现直接传递。发送方很容易确定传递是否是直接传递，它只要提取出分组目的端的网络地址(用掩码) ,并与它所连接的网络地址进行比较。如果相同，则传递就是直接的。
 
-间接传递，如果目的主机与发送方不在同一个网络上，分组就是间接传递。在间接传递(indirect delivery) 时，分组从一个路由器传送到另一个路由器，直到它到达与最终目的端连接在同一个物理网络上的路由器为止。注意:一个传递永远包含一个直接传递和0个或多个间接传递。还要注意:最后的传递总是直接传递。
+**间接传递**，如果目的主机与发送方不在同一个网络上，分组就是间接传递。在间接传递(indirect delivery) 时，分组从一个路由器传送到另一个路由器，直到它到达与最终目的端连接在同一个物理网络上的路由器为止。注意:一个传递永远包含一个直接传递和0个或多个间接传递。还要注意:最后的传递总是直接传递。
 
 ## 冲突域和广播域
 
@@ -785,7 +785,7 @@ netstat应用程序可以用来得到接口所支持的多播地址。
 
 ### 冲突域
 
-冲突域是指连接在同一物理介质上的所有结点的集合，这些结点之间存在介质争用的现象。
+冲突域是指连接在同一物理介质上的所有结点的集合，这些结点之间存在**介质争用**的现象。
 
 在 OSI参考模型中
 
