--- a/计网/导论.md
+++ b/计网/导论.md
@@ -151,7 +151,7 @@
 
 由于分层后各层之间相对独立，灵活性好，因而分层的体系结构易于更新（替换单个模块)，易于调试，易于交流，易于抽象，易于标准化。但层次越多，有些功能在不同层中难免重复出现，产生额外的开销，导致整体运行效率越低。层次越少，就会使每层的协议太复杂。因此，在分层时应考虑层次的清晰程度与运行效率间的折中、层次数量的折中。
 
-依据一定的规则，将分层后的网络从低层到高层依次称为第1层、第2层…第n层，通常还为每层取一个特定的名称，如第1层的名称为物理层。在计算机网络的分层结构中，第n层中的活动元素通常称为第n层实体。具体来说，实体指任何可发送或接收信息的硬件或软件进程，通常是一个特定的软件模块。不同机器上的同一层称为**对等层**，同一层的实体称为**对等实体**。第”层实体实现的服务为第+1层所利用。在这种情况下，第n层称为服务提供者，第n+1层则服务于用户。
+依据一定的规则，将分层后的网络从低层到高层依次称为第1层、第2层…第n层，通常还为每层取一个特定的名称，如第1层的名称为物理层。在计算机网络的分层结构中，第n层中的活动元素通常称为第n层实体。具体来说，实体指任何可发送或接收信息的硬件或软件进程，通常是一个特定的软件模块。不同机器上的同一层称为**对等层**，同一层的实体称为**对等实体**。第n层实体实现的服务为第n+1层所利用。在这种情况下，第n层称为服务提供者，第n+1层则服务于用户。
 
 每一层还有自己传送的数据单位，其名称、大小、含义也各有不同。
 
@@ -243,7 +243,7 @@ OSI参考模型的层次结构如图1.8所示。
 
 #### 物理层
 
-物理层的传输单位是**比特**，功能是**在物理媒体上为数据段设备透明的传输原始比特流。**
+物理层的传输单位是**比特**，功能是**在物理媒体上为数据端设备透明的传输原始比特流。**
 
 物理层主要定义数据终端设备（DTE）和数据通信设备（DCE）的物理连接方法，所以**物理层协议**也称为**物理层接口标准。**由于在通信技术的早期阶段，通信规则称为规程，因此物理层协议也称为物理层规程。
 
@@ -257,7 +257,7 @@ OSI参考模型的层次结构如图1.8所示。
 
 #### 数据链路层
 
-数据链路层的传输单位是**帧**，任务是**将网络层传来的P数据报组装成帧**。数据链路层的功能可以概括为**成帧、差错控制、流量控制和传输管理等**。
+数据链路层的传输单位是**帧**，任务是**将网络层传来的IP数据报组装成帧**。数据链路层的功能可以概括为**封装成帧、透明传输、差错控制、流量控制和传输管理等**。
 
 如在两个相邻结点之间传送数据时，由于两个结点性能的不同，可能结点A发送数据的速率会比结点B接收数据的速率快，如果不加控制，那么结点B就会丢弃很多来不及接收的正确数据，造成传输线路效率的下降。流量控制可以协调两个结点的速率，使结点A发送数
 据的速率刚好是结点B可以接收的速率。
@@ -274,7 +274,7 @@ OSI参考模型的层次结构如图1.8所示。
 
 **拥塞控制**，如果结点都处于来不及接收分组而要丢弃大量分组的情况，那么网络就处于拥塞状态，拥塞状态使得网络中的两个结点无法正常通信。网络层要采取一定的措施来缓解这种拥塞，这就是拥塞控制。
 
-**因特网**是一个很大的**互联网**，它由大量**异构网络**通过**路由器**（Router)相互连接起来。因特网的主要网络层协议是**无连接的网际协议(Internet Protocol，IP)**和许多路由**选择协议**，因此因特网的网络层也称**网际层或IP层**。
+**因特网**是一个很大的**互联网**，它由大量**异构网络**通过**路由器**（Router)相互连接起来。因特网的主要网络层协议是无连接的**网际协议**(Internet Protocol，IP)和许多**路由选择协议**，因此因特网的网络层也称**网际层或IP层**。
 
 网络层的协议有IP、IPX、ICMP、IGMP、ARP、RARP和OSPF等。
 
@@ -282,7 +282,7 @@ OSI参考模型的层次结构如图1.8所示。
 
 传输层也称**运输层**，传输单位是**报文段(TCP)**或**用户数据报(UDP)**，传输层**负责主机中两个进程之间的通信**，功能是**为端到端连接提供可靠的传输服务，为端到端连接提供流量控制、差错控制、服务质量、数据传输管理等服务。**
 
-**数据链路层提供的是点到点的通信，传输层提供的是端到端的通信**，两者不同。通俗地说，**点到点可以理解为主机到主机之间的通信，一个点是指一个硬件地址或IP地址，网络中参与通信的主机是通过硬件地址或IP地址标识的**；**端到端的通信是指运行在不同主机内的两个进程之间的通信，一个进程由一个端口来标识，所以称为端到端通信。**
+**数据链路层提供的是点到点的通信，传输层提供的是端到端的通信**，两者不同。通俗地说，**点到点可以理解为主机到主机之间的通信，一个点是指一个硬件地址或IP地址，网络中参与通信的主机是通过硬件地址或IP地址标识的**；**端到端的通信是指运行在不同主机内的两个进程之间的通信，进程由端口号来标识，所以称为端到端通信。**
 
 使用传输层的服务，高层用户可以直接进行端到端的数据传输，从而忽略通信子网的存在。通过传输层的屏蔽，高层用户看不到子网的交替和变化。由于一台主机可同时运行多个进程，因此**传输层具有复用和分用的功能**。**复用**是指多个应用层进程可同时使用下面传输层的服务，**分用**是指传输层把收到的信息分别交付给上面应用层中相应的进程。
 
@@ -339,3 +339,82 @@ TCP/IP模型与OSI参考模型有许多相似之处。
 
 最后简单介绍使用通信协议栈进行通信的结点的数据传输过程。**每个协议栈的最顶端都是一个面向用户的接口，下面各层是为通信服务的协议。用户传输一个数据报时，通常给出用户能够理解的自然语言，然后通过应用层，将自然语言会转化为用于通信的通信数据。通信数据到达传输层，作为传输层的数据部分（传输层SDU)，加上传输层的控制信息（传输层PCI)，组成传输层的PDU，然后交到网络层，传输层的PDU下放到网络层后，就成为网络层的SDU，然后加上网络层的PCI，又组成了网络层的PDU，下放到数据链路层，就这样层层下放，层层包裹，最后形成的数据报通过通信线路传输，到达接收方结点协议栈，接收方再逆向地逐层把“包裹”拆开，然后把收到的数据提交给用户**，如图1.14所示。
 ![image-20231113102422261](assets/image-20231113102422261.png)
+
+# 同步传输与异步传输
+
+在网络通信过程中，通信双方要交换数据，需要高度的协同工作。为了正确的解释信号，接收方必须确切地知道信号应当何时接收和处理，因此定时是至关重要的。
+在计算机网络中，定时的因素称为**位同步**。同步是要接收方按照发送方发送的每个位的起止时刻和速率来接收数据，否则会产生误差。
+
+
+**通常可以采用同步或异步的传输方式对位进行同步处理。**
+
+**1. 异步传输（Asynchronous Transmission）：**异步传输模式(Asynchronous Transfer Mode,缩略语为ATM)
+异步传输一般以字符为单位，
+起始位：先发出一个逻辑”0”信号，表示传输字符的开始。
+空闲位：处于逻辑“1”状态，表示当前线路上没有资料传送。
+
+ 异步传输将比特分成小组进行传送，小组可以是8位的1个字符或更长。发送方可以在任何时刻发送这些比特组，
+而接收方从不知道它们会在什么时候到达。一个常见的例子是计算机键盘与主机的通信。按下一个字母键、数字键或特殊字符键，就发送一个8比特位的ASCII代码。
+键盘可以在任何时刻发送代码，这取决于用户的输入速度，内部的硬件必须能够在任何时刻接收一个键入的字符。
+
+异步传输存在一个潜在的问题，即接收方并不知道数据会在什么时候到达。在它检测到数据并做出响应之前，第一个比特已经过去了。
+这就像有人出乎意料地从后面走上来跟你说话，而你没来得及反应过来，漏掉了最前面的几个词。因此，每次异步传输的信息都以一个起始位开头，
+它通知接收方数据已经到达了，这就给了接收方响应、接收和缓存数据比特的时间；在传输结束时，一个停止位表示该次传输信息的终止。
+按照惯例，空闲（没有传送数据）的线路实际携带着一个代表二进制1的信号，异步传输的开始位使信号变成0，其他的比特位使信号随传输的数据信息而变化。
+最后，停止位使信号重新变回1，该信号一直保持到下一个开始位到达。例如在键盘上数字“1”，按照8比特位的扩展ASCII编码，将发送“00110001”，
+同时需要在8比特位的前面加一个起始位，后面一个停止位。
+
+异步传输的实现比较容易，由于每个信息都加上了“同步”信息，因此计时的漂移不会产生大的积累，但却产生了较多的开销。
+在上面的例子，每8个比特要多传送两个比特，总的传输负载就增加25%。对于数据传输量很小的低速设备来说问题不大，
+但对于那些数据传输量很大的高速设备来说，25%的负载增值就相当严重了。因此，异步传输常用于低速设备。
+
+**2. 同步传输（Synchronous Transmission）：**同步传输的比特分组要大得多。它不是独立地发送每个字符，每个字符都有自己的开始位和停止位，
+而是把它们组合起来一起发送。我们将这些组合称为数据帧，或简称为帧。
+
+数据帧的第一部分包含一组同步字符，它是一个独特的比特组合，类似于前面提到的起始位，用于通知接收方一个帧已经到达，
+但它同时还能确保接收方的采样速度和比特的到达速度保持一致，使收发双方进入同步。
+
+帧的最后一部分是一个帧结束标记。与同步字符一样，它也是一个独特的比特串，类似于前面提到的停止位，用于表示在下一帧开始之前没有别的即将到达的数据了。
+
+同步传输通常要比异步传输快速得多。接收方不必对每个字符进行开始和停止的操作。一旦检测到帧同步字符，它就在接下来的数据到达时接收它们。
+另外，同步传输的开销也比较少。例如，一个典型的帧可能有500字节（即4000比特）的数据，其中可能只包含100比特的开销。
+这时，增加的比特位使传输的比特总数增加2.5%，这与异步传输中25 %的增值要小得多。
+随着数据帧中实际数据比特位的增加，开销比特所占的百分比将相应地减少。但是，数据比特位越长，缓存数据所需要的缓冲区也越大，这就限制了一个帧的大小。
+
+另外，帧越大，它占据传输媒体的连续时间也越长。在极端的情况下，这将导致其他用户等得太久。
+
+同步传输方式中发送方和接收方的时钟是统一的、字符与字符间的传输是同步无间隔的。
+
+异步传输方式并不要求发送方和接收方的时钟完全一样，字符与字符间的传输是异步的。
+
+```cobol
+ 同步与异步传输的区别
+1,异步传输是面向字符的传输，而同步传输是面向比特的传输。
+2,异步传输的单位是字符而同步传输的单位是桢。
+3,异步传输通过字符起止的开始和停止码抓住再同步的机会，而同步传输则是以数据中抽取同步信息。
+4,异步传输对时序的要求较低，同步传输往往通过特定的时钟线路协调时序。
+5,异步传输相对于同步传输效率较低。
+```
+
+**简单说
+　　同步传输就是，数据没有被对方确认收到则调用传输的函数就不返回。**
+
+　　 **接收时，如果对方没有发送数据，则你的线程就一直等待，直到有数据了才返回，可以继续执行其他指令**
+
+　　 **异步传输就是，你调用一个函数发送数据，马上返回，你可以继续处理其他事，　　接收时，对方的有数据来，你会接收到一个消息，或者你的相关接收函数会被调用。
+形象点说**
+　　**异步传输: 你传输吧，我去做我的事了，传输完了告诉我一声**
+
+　　**同步传输: 你现在传输，我要亲眼看你传输完成，才去做别的事 用于异步通信的连接在OSI(开放系统互连)参考模型的物理层中被定义。**
+
+“异步通信”是一种很常用的通信方式。
+
+异步通信在发送字符时，所发送的字符之间的时间间隔可以是任意的。当然，接收端必须时刻做好接收的准备（如果接收端主机的电源都没有加上，那么发送端发送字符就没有意义，因为接收端根本无法接收）。发送端可以在任意时刻开始发送字符，因此必须在每一个字符的开始和结束的地方加上标志，即加上开始位和停止位，以便使接收端能够正确地将每一个字符接收下来。
+
+**异步通信的好处是通信设备简单、便宜，但传输效率较低（因为开始位和停止位的开销所占比例较大）**。
+
+**异步通信也可以是以帧作为发送的单位。接收端必须随时做好接收帧的准备**。这时，帧的首部必须设有一些特殊的比特组合，使得接收端能够找出一帧的开始。这也称为**帧定界**。帧定界还包含确定帧的结束位置。这有两种方法。一种是在帧的尾部设有某种特殊的比特组合来标志帧的结束。或者在帧首部中设有帧长度的字段。需要注意的是，在异步发送帧时，并不是说发送端对帧中的每一个字符都必须加上开始位和停止位后再发送出去，而是说，发送端可以在任意时间发送一个帧，而帧与帧之间的时间间隔也可以是任意的。在一帧中的所有比特是连续发送的。发送端不需要在发送一帧之前和接收端进行协调（不需要先进行比特同步）。
+
+**位同步：**
+
+要求接收端根据发送端发送数据的起止时间和时钟频率，来校正自己的时间基准和时钟频率，这个过程叫位同步。可见，位同步的目的是使接收端接收的每一位信息都与发送端保持同步。
